Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTICSDB.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
	USHORT  msgopt;             //Driver writes message options
	USHORT  msgoptext;          //Non-continuous, Valid, and current burst count (FW)
	USHORT  burstcount;         //Burst count (API)
	USHORT  reserved;           //reserved
	USHORT  msgact;             //Card writes message activity
	USHORT  datacount;          //Number of valid bytes in data[] buffer
	ULONG   listptr;            //Driver writes list buffer pointer
	union {
		ULONG  timetag;         //Card writes time-tag low value (32 bits)
		ULONG  hitcount;        //Card writes hit count
	};
	union {
		ULONG  maxtime;         //Card writes max time
		ULONG  elapsetime;      //Card writes elapsed time
	};
	ULONG   mintime;            //Card writes min time
	ULONG   userptr;            //Driver writes user code pointer
	ULONG   miscptr;            //reserved
	ULONG   timetagh;           //Card writes extended timetag (32 bits)
	USHORT  data[32];           //Card writes data block
} MSGFIELDSCSDB;
typedef MSGFIELDSCSDB * LPMSGFIELDSCSDB;
/**
*
*  BTICSDB Driver functions.
*
**/

BTICSDBAPI ERRVAL __stdcall BTICSDB_ChClear(INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_ChConfig(ULONG configval,USHORT bitrateflag,USHORT bytesperblock,USHORT framespersecond,USHORT blocksperframe,INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_ChGetCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_ChGetInfo(USHORT infotype,INT channum,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_ChIsCSDB(INT channum,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_ChIsRcv(INT channum,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_ChIsXmt(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_ChPause(INT channum,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_ChPauseCheck(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_ChResume(INT channum,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_ChStart(INT channum,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_ChStop(INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_FilterClear(BASEADDR baseaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_FilterDefault(ULONG configval,INT channum,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_FilterRd(INT addrval,INT sival,INT channum,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_FilterSet(ULONG configval,INT addrval,INT simask,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_FilterWr(MSGADDR msgaddr,INT addrval,INT sival,INT channum,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_ListDataRd(LPBYTE buf,INT count,LISTADDR listaddr,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_ListDataWr(LPBYTE buf,INT count,LISTADDR listaddr,HCORE handleval);
BTICSDBAPI LISTADDR __stdcall BTICSDB_ListRcvCreate(ULONG listconfigval,INT count,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_ListStatus(LISTADDR listaddr,HCORE handleval);
BTICSDBAPI LISTADDR __stdcall BTICSDB_ListXmtCreate(ULONG listconfigval,INT count,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_MsgBlockRd(LPMSGFIELDSCSDB msgfields,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_MsgBlockWr(LPMSGFIELDSCSDB msgfields,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_MsgCreate(ULONG configval,HCORE handleval);
BTICSDBAPI BYTE __stdcall BTICSDB_MsgDataByteRd(INT index,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_MsgDataByteWr(BYTE data,INT index,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_MsgDataRd(LPBYTE buf,INT count,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_MsgDataWr(LPBYTE buf,INT count,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_MsgIsAccessed(MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_MsgValidSet(MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_ParamAmplitudeConfig(ULONG configval,USHORT dacval,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_ParamAmplitudeGet(LPUSHORT dacval,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedBranch(ULONG condition,SCHNDX destindex,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_SchedBuild(INT nummsgs,LPMSGADDR msgs,LPINT freq,INT interblockgap,INT rsvdblocks,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedCall(ULONG condition,SCHNDX destindex,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedEntry(INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedGap(USHORT gapval,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedHalt(INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedLog(ULONG condition,USHORT tagval,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedMsg(MSGADDR msgaddr,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedPause(INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedPulse(INT dionum,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedRestart(INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedReturn(INT channum,HCORE handleval);
/**
*
*  Internal functions used by the BTICSDB Driver.
*
**/

BTICSDBAPI ERRVAL __stdcall BTICSDB_ChConfigEx(ULONG configval,USHORT bitrateflag,USHORT bytesperblock,USHORT framespersecond,USHORT blocksperframe,USHORT interbytegap,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_ChConfigExx(ULONG configval,USHORT count,USHORT bitrateflag,USHORT bytesperblock,USHORT framespersecond,USHORT blocksperframe,USHORT interbytegap,INT channum,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdAddr(SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdAlloc(INT count,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdAllocEx(ULONG configval,INT count,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdBaseRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdBaseWr(ULONG addrval,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdClear(INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdCountRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdCountWr(USHORT countval,INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdCtrlRd(SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdCtrlWr(USHORT ctrlval,SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdCurrRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdCurrWr(USHORT addrval,INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdInit(USHORT opcode,LPUSHORT block);
BTICSDBAPI SCHNDX __stdcall BTICSDB_CmdInsert(LPUSHORT block,INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdMaxLoopRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdMaxLoopWr(USHORT countval,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdRd(LPUSHORT block,ULONG addrval,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdRestart(INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdShotWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdSkipWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdStackClr(INT channum,HCORE handleval);