Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBVB.BAS


Public Declare Function BTICSDB_ChClear Lib "BTICSDB.DLL" Alias "_BTICSDB_ChClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ChConfig Lib "BTICSDB.DLL" Alias "_BTICSDB_ChConfig@28" (ByVal configval As Long, ByVal bitrateflag As Integer, ByVal bytesperblock As Integer, ByVal framespersecond As Integer, ByVal blocksperframe As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_ChGetCount Lib "BTICSDB.DLL" Alias "_BTICSDB_ChGetCount@12" (ByRef rcvcount As Long, ByRef xmtcount As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_ChGetInfo Lib "BTICSDB.DLL" Alias "_BTICSDB_ChGetInfo@12" (ByVal infotype As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ChIsCSDB Lib "BTICSDB.DLL" Alias "_BTICSDB_ChIsCSDB@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ChIsRcv Lib "BTICSDB.DLL" Alias "_BTICSDB_ChIsRcv@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ChIsXmt Lib "BTICSDB.DLL" Alias "_BTICSDB_ChIsXmt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_ChPause Lib "BTICSDB.DLL" Alias "_BTICSDB_ChPause@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_ChPauseCheck Lib "BTICSDB.DLL" Alias "_BTICSDB_ChPauseCheck@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_ChResume Lib "BTICSDB.DLL" Alias "_BTICSDB_ChResume@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_ChStart Lib "BTICSDB.DLL" Alias "_BTICSDB_ChStart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ChStop Lib "BTICSDB.DLL" Alias "_BTICSDB_ChStop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_FilterClear Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterClear@8" (ByVal basevaladdr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_FilterDefault Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterDefault@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_FilterRd Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterRd@16" (ByVal addrval As Long, ByVal sival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_FilterSet Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterSet@20" (ByVal configval As Long, ByVal addrval As Long, ByVal simask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_FilterWr Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterWr@20" (ByVal msgaddr As Long, ByVal addrval As Long, ByVal sival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListDataRd Lib "BTICSDB.DLL" Alias "_BTICSDB_ListDataRd@16" (ByRef buf As Byte, ByVal count As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListDataWr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListDataWr@16" (ByRef buf As Byte, ByVal count As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListRcvCreate Lib "BTICSDB.DLL" Alias "_BTICSDB_ListRcvCreate@16" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListStatus Lib "BTICSDB.DLL" Alias "_BTICSDB_ListStatus@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ListXmtCreate Lib "BTICSDB.DLL" Alias "_BTICSDB_ListXmtCreate@16" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgBlockRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgBlockRd@12" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgBlockWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgBlockWr@12" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgCreate Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCreate@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgDataByteRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgDataByteRd@12" (ByVal index As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Byte
Public Declare Function BTICSDB_MsgDataByteWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgDataByteWr@16" (ByVal data As Byte, ByVal index As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgDataRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgDataRd@16" (ByRef buf As Byte, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgDataWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgDataWr@16" (ByRef buf As Byte, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgIsAccessed Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgIsAccessed@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_MsgValidSet Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgValidSet@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTICSDB_ParamAmplitudeConfig Lib "BTICSDB.DLL" Alias "_BTICSDB_ParamAmplitudeConfig@16" (ByVal configval As Long, ByVal dacval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ParamAmplitudeGet Lib "BTICSDB.DLL" Alias "_BTICSDB_ParamAmplitudeGet@12" (ByRef dacval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedBranch Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBranch@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedBuild Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBuild@28" (ByVal nummsgs As Long, ByRef msgs As Long, ByRef freq As Long, ByVal interblockgap As Long, ByVal rsvdblocks As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedCall Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedCall@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedEntry Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedEntry@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedGap Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedGap@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedHalt Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedHalt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedLog Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedLog@16" (ByVal condition As Long, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedMsg Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedMsg@12" (ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedPause Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedPulse Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedPulse@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedRestart Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedRestart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_SchedReturn Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedReturn@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ChConfigEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ChConfigEx@32" (ByVal configval As Long, ByVal bitrateflag As Integer, ByVal bytesperblock As Integer, ByVal framespersecond As Integer, ByVal blocksperframe As Integer, ByVal interbytegap As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_ChConfigExx Lib "BTICSDB.DLL" Alias "_BTICSDB_ChConfigExx@36" (ByVal configval As Long, ByVal count As Integer, ByVal bitrateflag As Integer, ByVal bytesperblock As Integer, ByVal framespersecond As Integer, ByVal blocksperframe As Integer, ByVal interbytegap As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdAddr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdAddr@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdAlloc Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdAlloc@8" (ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdAllocEx Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdAllocEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdBaseRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdBaseRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_CmdBaseWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdBaseWr@12" (ByVal addrval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_CmdClear Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdCountRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdCountRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICSDB_CmdCountWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdCountWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_CmdCtrlRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdCtrlRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICSDB_CmdCtrlWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdCtrlWr@16" (ByVal ctrlval As Integer, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_CmdCurrRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdCurrRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICSDB_CmdCurrWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdCurrWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTICSDB_CmdInit Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdInit@8" (ByVal opcode As Integer, ByRef block As Integer)
Public Declare Function BTICSDB_CmdInsert Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdInsert@12" (ByRef block As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdMaxLoopRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdMaxLoopRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICSDB_CmdMaxLoopWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdMaxLoopWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_CmdRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdRd@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_CmdRestart Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdRestart@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICSDB_CmdShotWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdShotWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICSDB_CmdSkipWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdSkipWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICSDB_CmdStackClr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStackClr@8" (ByVal channum As Long, ByVal handleval As Long)
